refactor(#22): introduce build-logic convention plugins (#52)